# safescroll-openenv

./: .env.example  .gitignore  LICENSE  README.md  __init__.py  baseline.py  baseline_results.json  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_interactive.py
server/: Dockerfile  __init__.py  app.py  graders.py  requirements.txt  rewards.py  safescroll_env_environment.py  scenarios.py  scenarios_easy.py  scenarios_hard.py  scenarios_medium.py
tests/: test_safescroll.py
